feat: add status logging with state change detection to check script

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,6 @@ services:
     network_mode: host
     volumes:
       - ./check-script:/usr/local/scripts:ro
+      - ./log:/var/log:rw
     env_file:
       - .env
