chore: update cleanup job cut-off time format to explicit UTC timezone

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -102,7 +102,7 @@ jobs:
         uses: snok/container-retention-policy@v2
         with:
           image-names: ${{ github.event.repository.name }}
-          cut-off: A day ago
+          cut-off: 1 day ago UTC
           untagged-only: true
           account-type: personal
           token: ${{ secrets.GITHUB_TOKEN }}
