--- a/.checkov.yml
+++ b/.checkov.yml
@@ -1,3 +1,5 @@
+# Keepalived requires root to manage network interfaces and VRRP
+# Permissions are scoped per-job, not write-all
 skip-check:
-  - CKV_DOCKER_3  # Keepalived requires root to manage network interfaces and VRRP
-  - CKV2_GHA_1    # Permissions are scoped per-job, not write-all
+  - CKV_DOCKER_3
+  - CKV2_GHA_1
