chore: update Docker image reference from 'keepalived' to 'keepalived-db-cluster' in compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 ---
 services:
   keepalived:
-    image: peterweissdk/keepalived:latest
+    image: peterweissdk/keepalived-db-cluster:latest
     container_name: keepalived
     restart: unless-stopped
     cap_add:
